YACC/Exercise_3/y.output
Grammar

    0 $accept: S $end

    1 S: F
    2  | F S

    3 F: N '(' P ')' ';'

    4 N: id

    5 P: /* empty */
    6  | E
    7  | P ',' E

    8 E: E '-' E
    9  | E '+' E
   10  | E '*' E
   11  | E '/' E
   12  | '(' E ')'
   13  | num


Terminals, with rules where they appear

$end (0) 0
'(' (40) 3 12
')' (41) 3 12
'*' (42) 10
'+' (43) 9
',' (44) 7
'-' (45) 8
'/' (47) 11
';' (59) 3
error (256)
id (258) 4
num (259) 13


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
S (14)
    on left: 1 2, on right: 0 2
F (15)
    on left: 3, on right: 1 2
N (16)
    on left: 4, on right: 3
P (17)
    on left: 5 6 7, on right: 3 7
E (18)
    on left: 8 9 10 11 12 13, on right: 6 7 8 9 10 11 12


state 0

    0 $accept: . S $end

    id  shift, and go to state 1

    S  go to state 2
    F  go to state 3
    N  go to state 4


state 1

    4 N: id .

    $default  reduce using rule 4 (N)


state 2

    0 $accept: S . $end

    $end  shift, and go to state 5


state 3

    1 S: F .
    2  | F . S

    id  shift, and go to state 1

    $default  reduce using rule 1 (S)

    S  go to state 6
    F  go to state 3
    N  go to state 4


state 4

    3 F: N . '(' P ')' ';'

    '('  shift, and go to state 7


state 5

    0 $accept: S $end .

    $default  accept


state 6

    2 S: F S .

    $default  reduce using rule 2 (S)


state 7

    3 F: N '(' . P ')' ';'

    num  shift, and go to state 8
    '('  shift, and go to state 9

    $default  reduce using rule 5 (P)

    P  go to state 10
    E  go to state 11


state 8

   13 E: num .

    $default  reduce using rule 13 (E)


state 9

   12 E: '(' . E ')'

    num  shift, and go to state 8
    '('  shift, and go to state 9

    E  go to state 12


state 10

    3 F: N '(' P . ')' ';'
    7 P: P . ',' E

    ')'  shift, and go to state 13
    ','  shift, and go to state 14


state 11

    6 P: E .
    8 E: E . '-' E
    9  | E . '+' E
   10  | E . '*' E
   11  | E . '/' E

    '+'  shift, and go to state 15
    '-'  shift, and go to state 16
    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    $default  reduce using rule 6 (P)


state 12

    8 E: E . '-' E
    9  | E . '+' E
   10  | E . '*' E
   11  | E . '/' E
   12  | '(' E . ')'

    '+'  shift, and go to state 15
    '-'  shift, and go to state 16
    '*'  shift, and go to state 17
    '/'  shift, and go to state 18
    ')'  shift, and go to state 19


state 13

    3 F: N '(' P ')' . ';'

    ';'  shift, and go to state 20


state 14

    7 P: P ',' . E

    num  shift, and go to state 8
    '('  shift, and go to state 9

    E  go to state 21


state 15

    9 E: E '+' . E

    num  shift, and go to state 8
    '('  shift, and go to state 9

    E  go to state 22


state 16

    8 E: E '-' . E

    num  shift, and go to state 8
    '('  shift, and go to state 9

    E  go to state 23


state 17

   10 E: E '*' . E

    num  shift, and go to state 8
    '('  shift, and go to state 9

    E  go to state 24


state 18

   11 E: E '/' . E

    num  shift, and go to state 8
    '('  shift, and go to state 9

    E  go to state 25


state 19

   12 E: '(' E ')' .

    $default  reduce using rule 12 (E)


state 20

    3 F: N '(' P ')' ';' .

    $default  reduce using rule 3 (F)


state 21

    7 P: P ',' E .
    8 E: E . '-' E
    9  | E . '+' E
   10  | E . '*' E
   11  | E . '/' E

    '+'  shift, and go to state 15
    '-'  shift, and go to state 16
    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    $default  reduce using rule 7 (P)


state 22

    8 E: E . '-' E
    9  | E . '+' E
    9  | E '+' E .
   10  | E . '*' E
   11  | E . '/' E

    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    $default  reduce using rule 9 (E)


state 23

    8 E: E . '-' E
    8  | E '-' E .
    9  | E . '+' E
   10  | E . '*' E
   11  | E . '/' E

    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    $default  reduce using rule 8 (E)


state 24

    8 E: E . '-' E
    9  | E . '+' E
   10  | E . '*' E
   10  | E '*' E .
   11  | E . '/' E

    $default  reduce using rule 10 (E)


state 25

    8 E: E . '-' E
    9  | E . '+' E
   10  | E . '*' E
   11  | E . '/' E
   11  | E '/' E .

    $default  reduce using rule 11 (E)
